--- a/ScrollView/project.properties
+++ b/ScrollView/project.properties
@@ -12,4 +12,4 @@
 
 # Project target.
 target=android-22
-android.library.reference.1=../../git/ScrollViewLib/ScrollViewLib
+android.library.reference.1=../ScrollViewLib
